--- a/src/assets/styles/transition.scss
+++ b/src/assets/styles/transition.scss
@@ -2,36 +2,46 @@
 
 // div隐藏的位置  y方向向上全部隐藏
 .slide-down-enter,.slide-down-leave-to {
-    transform: translate3d(0,-100%,0)
-  }
-  
-  // div 出现的位置
-  .slide-down-enter-to,.slide-down-leave,
-  .slide-up-enter-to,.slide-up-leave {
-    transform: translate3d(0,0,0)
-  }
-  
-  .slide-down-enter-active,.slide-down-leave-active,
-  .slide-up-enter-active,.slide-up-leave-active,
-  .slide-right-enter-active,.slide-right-leave-active,
-  .fade-enter-active,.fade-leave-active {
-    transition: all .3s linear;
-  }
-  
-  .slide-up-enter,.slide-up-leave-to {
-    // 三维转换x,y,z
-    transform: translate3d(0,px2rem(138),0)
-  }
-  
-  // 目录栏出现时mask的过渡动画
-  .fade-enter,.fade-leave-to{
-    opacity: 0;
-  }
-  .fade-enter-to,.fade-leave{
-    opacity: 1;
-  }
-  
-  // 目录栏的过渡动画
-  .slide-right-enter,.slide-right-leave-to{
-    transform: translate3d(-100%,0,0)
-  }
+  transform: translate3d(0,-100%,0)
+}
+
+// div 出现的位置
+.slide-down-enter-to,.slide-down-leave,
+.slide-up-enter-to,.slide-up-leave {
+  transform: translate3d(0,0,0)
+}
+
+.slide-down-enter-active,.slide-down-leave-active,
+.slide-up-enter-active,.slide-up-leave-active,
+.slide-right-enter-active,.slide-right-leave-active,
+.fade-enter-active,.fade-leave-active,
+.popup-slide-up-enter-active, .popup-slide-up-leave-active {
+  transition: all .3s linear;
+}
+
+.slide-up-enter,.slide-up-leave-to {
+  // 三维转换x,y,z
+  transform: translate3d(0,px2rem(138),0)
+}
+
+// 目录栏出现时mask的过渡动画
+.fade-enter,.fade-leave-to{
+  opacity: 0;
+}
+.fade-enter-to,.fade-leave{
+  opacity: 1;
+}
+
+// 目录栏的过渡动画
+.slide-right-enter,.slide-right-leave-to{
+  transform: translate3d(-100%,0,0)
+}
+// 字体family面板动画
+.popup-slide-up-enter, .popup-slide-up-leave-to {
+  transform: translate3d(0, 100%, 0);
+  opacity: 0;
+}
+.popup-slide-up-enter-to, .popup-slide-up-leave {
+  transform: translate3d(0, 0, 0);
+  opacity: 1;
+}
