--- a/src/assets/styles/mixin.scss
+++ b/src/assets/styles/mixin.scss
@@ -21,3 +21,9 @@ $ratio: 375 / 10;
     justify-content: flex-end;
     align-items: center;
 }
+// 字符串单行显示且多余省略
+@mixin ellipsis {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+}
