--- a/src/assets/styles/transition.scss
+++ b/src/assets/styles/transition.scss
@@ -15,7 +15,8 @@
 .slide-up-enter-active,.slide-up-leave-active,
 .slide-right-enter-active,.slide-right-leave-active,
 .fade-enter-active,.fade-leave-active,
-.popup-slide-up-enter-active, .popup-slide-up-leave-active {
+.popup-slide-up-enter-active, .popup-slide-up-leave-active,
+.fade-slide-right-enter-active, .fade-slide-right-leave-active {
   transition: all .3s linear;
 }
 
@@ -41,7 +42,13 @@
   transform: translate3d(0, 100%, 0);
   opacity: 0;
 }
-.popup-slide-up-enter-to, .popup-slide-up-leave {
+.popup-slide-up-enter-to, .popup-slide-up-leave, 
+.fade-slide-right-enter-to, .fade-slide-right-leave {
   transform: translate3d(0, 0, 0);
   opacity: 1;
+}
+// 目录的动画
+.fade-slide-right-enter, .fade-slide-right-leave-to {
+  transform: translate3d(-100%, 0, 0);
+  opacity: 0;
 }
